css/default.css
/* ... */
hr {
    border-top: 1px solid #e1e8ed;
}

label {
    word-break: keep-all;
}

del, s, strike {
    color: gray;
}
/* 태그 수정 End */

/* 백그라운드 색 지정 */
.Liberty, body {
    background-color: #f5f5f5;
}
/* 백그라운드 색 지정 End*/

/* 컨텐츠 넓이 수정 및 가운대 정렬 */
.Liberty .nav-wrapper .navbar, .Liberty .content-wrapper {
    max-width: 1200px;
    margin: 0 auto;
}
/* 컨텐츠 넓이 수정 및 가운대 정렬 End */

/* 네비 수정 */
.Liberty .nav-wrapper {
    min-height: 2.8rem;
    background-color: var(--liberty-navbar-color, #4188f1);
    z-index: 100;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    font-weight: bold;
}

.Liberty .nav-wrapper .navbar {
    padding: 0 1rem;
    border: 0;
    border-radius: 0;
}

.Liberty .nav-wrapper .navbar .navbar-brand {
    height: 2.8rem;
    width: var(--liberty-navbar-logo-width, 6.6rem);
    background-image: var(--liberty-navbar-logo-image, none);
    background-repeat: no-repeat no-repeat;
    background-size: auto var(--liberty-navbar-logo-size, 1.9rem);
    background-position: left center;
    margin: var(--liberty-navbar-logo-margin, 0);
    padding: var(--liberty-navbar-logo-padding, 0);
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item {
    margin: 0;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .fa {
    margin-right: 0.5rem;
    font-size: 1rem;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link {
    color: #fff;
    font-size: 1rem;
    padding: 0.7rem 0.8rem;
    line-height: 1.4rem;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link:hover {
	background-color: #023e98;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link:hover,
.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .nav-link:focus {
    transition: 0.3s;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .dropdown-menu {
    margin-top: 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.Liberty .nav-wrapper .navbar .navbar-nav .nav-item .dropdown-toggle::after {
    margin-right: 0;
    margin-left: 0.35rem;
}

.Liberty .nav-wrapper .navbar .form-inline {
    padding: 0.4rem 0;
    float: right;
}

.Liberty .nav-wrapper .navbar .form-inline .form-control {
    font-size: 0.8rem;
    height: 2rem;
    width: 10.8rem;
    padding: 0.2rem 0.4rem;
    border-color: #e1e8ed;
    border-radius: 0;
    border-top-left-radius: 0.35rem;
    border-bottom-left-radius: 0.35rem;
    float: none;
}

.Liberty .nav-wrapper .navbar .form-inline .form-control:focus {
    border-right-color: #e1e8ed;
}

.Liberty .nav-wrapper .navbar .form-inline .input-search {
    display: table-cell;
    float: left;
    position: relative;
    width: 100%;
    z-index: 4;
}

.Liberty .nav-wrapper .navbar .form-inline .btn {
    color: #4f5b63;
    padding: 0.2rem 0.4rem;
    line-height: 22px;
}

.Liberty .nav-wrapper .navbar .form-inline .btn:hover, .Liberty .nav-wrapper .navbar .form-inline .btn:focus {
    background-color: var(--liberty-navbar-color, #4188f1);
    border-color: #5997f3;
    color: #fff;
    outline: 0;
    transition: .3s;
}

.Liberty .nav-wrapper .navbar .form-inline .btn .fa {
    width: 0.9rem;
}

.Liberty .nav-wrapper .navbar .navbar-login {
    float: right;
    padding-left: 0.8rem;
}

.Liberty .nav-wrapper .navbar .navbar-login .fa {
    color: #fff;
    padding: 0.7rem 0;
    font-size: 1.5rem;
    line-height: 1.4rem;
}

#login-menu>.fa {
    line-height: 0.6rem;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-menu {
    float: left;
    cursor: pointer;
    padding: 0.4rem 0;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-menu>a:after {
    display: none;
}

.Liberty .nav-wrapper .navbar .navbar-login .profile-img {
    width: 2rem;
    height: 2rem;
    border-radius: 0.35rem;
    margin: 0;
    border: 1px solid #e1e8ed;
}

.Liberty .nav-wrapper .navbar .navbar-login .logout-btn {
    margin-left: 0.8rem;
    display: inline-block;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu {
    top: 120%;
    right: -0.5rem;
    z-index: 1002;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:before, .Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:after {
    bottom: 100%;
    border: solid transparent;
    content: " ";
    position: absolute;
    left: 0;
    right: auto;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:before {
    border-bottom-color: #e1e8ed;
    border-width: 0.8rem;
    left: auto;
    right: 0.6rem;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:after {
    border-bottom-color: #fff;
    border-width: 0.78rem;
    left: auto;
    right: 0.6rem;
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu .username {
    cursor: default;
    text-align: right;
    font-size: 1rem;
    white-space: unset;
    word-break: break-all;
    padding: 3px 15px
}

.Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu .username:hover {
    background-color: transparent;
    color: #373a3c;
}
/* 네비 수정 End */

/* 오른쪽 메뉴 수정 */
.Liberty .content-wrapper .liberty-sidebar {
    float: right;
    width: 15rem;
    position: relative;
}

.Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed {
    position: absolute;
    z-index: 1;
}

.Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed.fixed {
    position: fixed;
}

.Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed .live-recent {
    width: 15rem;
}

.Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed .live-recent .live-recent-header .nav {
    border: 0;
}

.Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed .live-recent .live-recent-header .nav .nav-item {
    width: 15rem;
    border: 1px solid #e1e8ed;
    border-top-left-radius: 0.35rem;
    border-top-right-radius: 0.35rem;
    background-color: #f5f8fa;
}
/* ... */

